# checkers-nnue

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
docs/: app.js  checkers.js  checkers.wasm  index.html  styles.css
src/: AIPlayer.hpp  Checkers.hpp  EGTB.hpp  Matrix.hpp  NNUE.hpp  bench.cpp  bench.hpp  main.cpp  matchmake.cpp  trainNNUE.cpp  web.cpp
src/headers/: AIPlayer.hpp  Checkers.hpp  EGTB.hpp  Matrix.hpp  NNUE.hpp  NNUEInference.hpp
web/: app.js  index.html  styles.css
